tests-integration/fixtures/checking/187_record_expression_nested_additional/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms
test :: { outer :: { x :: Int } }

Types

Diagnostics
error[AdditionalProperty]: Additional properties not allowed: y
  --> 4:17..4:31
  |
4 | test = { outer: { x: 1, y: 2 } }
  |                 ^~~~~~~~~~~~~~
